stop eyebleeding on main page

--- a/funding/static/css/project.css
+++ b/funding/static/css/project.css
@@ -64,3 +64,11 @@
 .urlinput{
   width: 70%;
 }
+
+.row.status{
+  padding-bottom: 15px;
+}
+
+.label-language{
+  margin-right: 15px;
+}
